--- a/style.css
+++ b/style.css
@@ -25,6 +25,13 @@ body{
   font-size: 50px;
 }
 
+.ville-container{
+  justify-content: center;
+  gap: 10px;
+  display: flex;
+  align-items: center;
+}
+
 .ville{
   font-weight: bolder;
 }
